--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,31 +1,311 @@
-/* ~~~ MAIN SASS FILE USED TO DEFINE GLOBAL STYLES AND OVERIDE DEFAULT BOOTSTRAP CLASSES AND STYLES */
-// $theme-colors: (
-//     "primary": green
-// );
-/* FONTS IMPORT: Robot @ 300, 400, 700 */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import 'base';
+@import 'layout/navigation';
 
-// BOOTSTRAP IMPORT 
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import 'theme/style'; 
+@import 'pages/about';
+@import 'pages/contact';
 
-html {
-    // used for responsivness --- 1rem === 10px
-    font-size: 62.5%;
-    box-sizing: border-box;
-}
-*::before,
-*::after,
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
+// Some unsorted styles used in all pages
 
-body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', 'sans-serif';
-    font-size: 1.6rem;
-    line-height: 1.7;
-}
+a:link,
+a:visited {
+    color: #e36159;
+    &:hover {
+    color: #e7766f;
+    &:active {
+    color: #df4c43;
+    }
+    }
+  }
+
+   .text-color-primary,
+   .text-primary {
+    color: #e36159 !important;
+    &:hover {
+      color: #e36159 !important;
+
+    }
+  }
+
+   .text-color-secondary,
+   .text-secondary {
+    color: #212529 !important;
+    &:hover {
+      color: #212529 !important;
+
+    }
+  }
+ 
+   .text-color-dark,
+   .text-dark {
+    color: #212529 !important;
+    &:hover {
+    color: #212529 !important;
+
+    }
+  }
+   .text-color-light,
+   .text-light {
+    color: #FFF !important;
+    &:hover {
+    color: #FFF !important;
+
+    }
+  }
+
+   .bg-color-primary,
+   .bg-primary {
+    background-color: #e36159 !important;
+    &:hover {
+    background-color: #e36159 !important;
+
+    }
+  }
+ 
+   .bg-color-secondary,
+   .bg-secondary {
+    background-color: #212529 !important;
+    &:hover {
+    background-color: #212529 !important;
+
+    } 
+  }
+ 
+   .bg-color-dark,
+   .bg-dark {
+    background-color: #212529 !important;
+    &:hover {
+    background-color: #212529 !important;
+
+    }
+  }
+   
+   .bg-color-light,
+   .bg-light {
+    background-color: #FFF !important;
+    &:hover {
+    background-color: #FFF !important;
+
+    }
+  }
+  
+  /* Color Transition */
+  @-webkit-keyframes colorTransition {
+    0% {
+      background-color: #e36159;
+    }
+    33% {
+      background-color: #212529;
+    }
+    66% {
+      background-color: #EDEDED;
+    }
+    100% {
+      background-color: #BBB;
+    }
+  }
+  @keyframes colorTransition {
+    0% {
+      background-color: #e36159;
+    }
+    33% {
+      background-color: #212529;
+    }
+    66% {
+      background-color: #EDEDED;
+    }
+    100% {
+      background-color: #BBB;
+    }
+  }
+   .border-color-primary {
+    border-color: #e36159 !important;
+    &:hover {
+    border-color: #e36159 !important;
+
+    }
+  }
+
+   .border-color-secondary {
+    border-color: #212529 !important;
+    &:hover {
+    border-color: #212529 !important;
+
+    }
+  }
+ 
+   .border-color-dark {
+    border-color: #212529 !important;
+    &:hover {
+    border-color: #212529 !important;
+
+    }
+  }
+
+   .border-color-light {
+    border-color: #FFF !important;
+    &:hover {
+    border-color: #FFF !important;
+
+    } 
+  }
+  
+
+  
+  
+  .btn-link {
+    color: #e36159;
+    &:hover {
+    color: #e7766f;
+
+    }
+    &:active {
+    color: #df4c43;
+
+    }
+  }
+  .btn-primary {
+    background-color: #e36159;
+    border-color: #e36159 #e36159 #dc372d;
+    color: #FFF !important;
+    &:hover {
+      background-color: #e9807a;
+      border-color: #ea8b85 #ea8b85 #e36159;
+      color: #FFF;
+    }
+    &:focus {
+    box-shadow: 0 0 0 3px rgba(227, 97, 89, 0.5);
+
+    }
+    &:disabled {
+      background-color: #e36159;
+      border-color: #e36159 #e36159 #dc372d;
+    }
+    &:active {
+      background-color: #dd4238 !important;
+      background-image: none !important;
+      border-color: #dc372d #dc372d #b7281f !important;
+    }
+  }
+
+  
+   .show > .btn-primary.dropdown-toggle,
+   .show > .btn-primary-scale-2.dropdown-toggle {
+    background-color: #dd4238 !important;
+    background-image: none !important;
+    border-color: #dc372d #dc372d #b7281f !important;
+  }
+   .btn-secondary {
+    background-color: #212529;
+    border-color: #212529 #212529 #0a0c0d;
+    color: #FFF;
+    &:hover {
+      background-color: #32383e;
+      border-color: #383f45 #383f45 #212529;
+      color: #FFF;
+    }
+    &:focus {
+    box-shadow: 0 0 0 3px rgba(33, 37, 41, 0.5);
+
+    }
+    &:disabled {
+      background-color: #212529;
+      border-color: #212529 #212529 #0a0c0d;
+    }
+    &:active {
+      background-color: #101214 !important;
+      background-image: none !important;
+      border-color: #0a0c0d #0a0c0d #000000 !important;
+    }
+  }
+
+   .show > .btn-secondary.dropdown-toggle,
+   .show > .btn-secondary-scale-2.dropdown-toggle {
+    background-color: #101214 !important;
+    background-image: none !important;
+    border-color: #0a0c0d #0a0c0d #000000 !important;
+   }
+   .btn-dark {
+    background-color: #212529;
+    border-color: #212529 #212529 #0a0c0d;
+    color: #FFF !important;
+    &:hover {
+      background-color: #32383e;
+      border-color: #383f45 #383f45 #212529;
+      color: #FFF;
+    }
+    &:focus {
+    box-shadow: 0 0 0 3px rgba(33, 37, 41, 0.5);
+
+    }
+    &:disabled {
+      background-color: #212529;
+      border-color: #212529 #212529 #0a0c0d;
+    }
+    &:active {
+      background-color: #101214 !important;
+      background-image: none !important;
+      border-color: #0a0c0d #0a0c0d #000000 !important;
+    }
+  }
+
+   .btn-light {
+    background-color: #FFF;
+    border-color: #FFF #FFF #e6e6e6;
+    color: #777;
+    &:hover {
+      background-color: #ffffff;
+      border-color: #ffffff #ffffff #FFF;
+      color: #777;
+    }
+    &:focus {
+    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.5);
+
+    }
+    &:disabled {
+      background-color: #FFF;
+      border-color: #FFF #FFF #e6e6e6;
+    }
+    &:active {
+      background-color: #ececec !important;
+      background-image: none !important;
+      border-color: #e6e6e6 #e6e6e6 #cccccc !important;
+    }
+  }
+
+
+
+   section.section-primary {
+    background-color: #e36159 !important;
+    border-color: #df4c43 !important;
+    h1, h2, h3, h4, h5, h6 {
+      color: #fff;
+    }
+    p {
+    color: #e6e6e6;
+
+    }
+  }
+ 
+   
+   section.section-secondary {
+    background-color: #212529 !important;
+    border-color: #16181b !important;
+    h1, h2, h3, h4, h5, h6 {
+      color: #fff;
+    }
+    p {
+    color: #e6e6e6;
+
+    }
+  }
+
+
+
+
+
+  @import 'components/hero';
+  @import 'components/featurebox';
+  @import 'components/testimonial';
+  @import 'components/pricing';
+  @import 'components/subscribe-form';
