finished contact page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'theme/style'; 
 @import 'pages/about';
 @import 'pages/contact';
+@import 'pages/services';
 
 // Some unsorted styles used in all pages
 
