--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -1,6 +1,6 @@
 .contact-hero {
     background-color: $dark;
-    height: 55vhyarn;
+    height: 55vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,6 +12,21 @@
             font-size: 38px;
             color: #fff;
             margin-bottom: 1.2rem;
+        }
+    }
+}
+.contact-form {
+    .lead {
+        font-size: 1rem;
+    }
+    h2 {
+        color: #000;
+    }
+    form {
+        input, textarea {
+            &::placeholder {
+                font-size: 12px;
+            }
         }
     }
 }
