--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -11,6 +11,7 @@
 @import "../../node_modules/animate.css/animate.min.css";
 // BOOTSTRAP IMPORT 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import 'variables';
 // FONTAWESOME IMPORT
 @import '../../node_modules/@fortawesome/fontawesome-free/css/all.min.css'; 
 a:link,
